--- a/public/index.html
+++ b/public/index.html
@@ -921,18 +921,22 @@ socket.on('your_hand', ({ hand, sets, lockedSets, lockedSetCards, hasDrawn: hd }
   mySets           = sets;
   myLockedSets     = lockedSets;
   myLockedSetCards = lockedSetCards;
-  hasDrawn         = hd;
+  hasDrawn         = hd;  // ← this is the authoritative source of truth
 
-  // Clear any staged cards that are no longer in hand
+  // Clear staged cards that are no longer in hand
   stagedCards = stagedCards.filter(sc =>
     myHand.some(c => c.id === sc.id && c.color === sc.color)
   );
-  // Clear selected index — hand may have changed
+  // Reset discard selection since hand changed
   selectedIdx = null;
 
-  // Auto-detect and highlight any complete sets in hand
+  // Auto-detect complete sets now that hand is updated
   autoDetectSets();
 
+  // Always update table state and hint here — this is what actually
+  // unlocks the cards after a draw since hasDrawn just became true
+  updateTableState();
+  updateTurnHint();
   renderAll();
 });
 
@@ -947,11 +951,14 @@ socket.on('set_locked', ({ slotIndex, lockedSets }) => {
 
 socket.on('timer_start', ({ seconds, playerId }) => {
   isMyTurn = (playerId === myId);
+  // Note: hasDrawn is managed only by your_hand events.
+  // timer_start fires at turn-start AND after drawing — in both cases
+  // your_hand arrives right after and does the definitive renderAll().
+  // We just update the timer and table visual here.
   startTimerUI(seconds);
+  updateTableState();
   updateTurnHint();
   updateButtons();
-  updateTableState();
-  renderHand(); // re-render so cards go active/inactive correctly
 });
 
 socket.on('card_drawn', ({ card, source }) => {
